--- a/task-2/css/style.css
+++ b/task-2/css/style.css
@@ -61,10 +61,35 @@ img.logo {
 
 /* Carousel indicators */
 .carousel-indicators li {
-    width: 10px;
-    height: 10px;
+    width: 15px;
+    height: 15px;
     border-radius: 100%;
+    background-color: #270FF9;
     position: left;
+}
+/* Carousel COntrols */
+.carousel-control-prev-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%232C3E50' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E")!important;
+}
+.carousel-control-prev-icon : hover {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23#270FFA' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E")!important;
+}
+.carousel-control-next-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23#2C3E50' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E")!important;
+}
+.carousel-control-prev {
+	background-color: #FDFEFE;
+	width: 50px;
+	height: 50px;
+	margin-top: 230px;
+	margin-left: 30px;
+}
+.carousel-control-next {
+	background-color: #FDFEFE;
+	width: 50px;
+	height: 50px;
+	margin-top: 230px;
+	margin-right: 30px;
 }
 
 /* Card Margin Left */
@@ -119,4 +144,13 @@ a#read-more {
 
 a#read-more:hover {
 	color: black;
+}
+
+#s-1-1 {
+	margin-top: -35px;
+	margin-left: -10px;
+}
+
+.a-2 {
+	margin-left: -10px;
 }
